fix bug #63982: isset() inconsistently produces a fatal error on protected property